--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "openai-php/laravel": "^0.8.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
